--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "my-app",
+  "name": "react-todo-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "npm": "^6.12.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.9.0",
-    "react-otp-input": "^1.0.1",
-    "react-scripts": "^3.1.1",
-    "styled-components": "^4.4.0",
-    "uuidv4": "^5.0.1"
+    "@testing-library/jest-dom": "^5.16.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,7 +18,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
