--- a/package.json
+++ b/package.json
@@ -10,15 +10,14 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "tailwindcss": "^2.2.19",
+    "tailwind": "^4.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build-css": "tailwindcss build src/index.css -o public/styles.css"
+    "build-css": "tailwindcss build src/index.css -o public/index.css"
   },
   "eslintConfig": {
     "extends": [
@@ -37,5 +36,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.4",
+    "tailwindcss": "^2.2.19"
   }
 }
